[package]
name = "chapter09"
version = "0.1.0"
authors = ["ellbrid <ell@exoskeleton.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chapter01 = { path = "../chapter01" }
chapter04 = { path = "../chapter04" }
rand = "0.7.3"
