[package]
name = "chapter13"
version = "0.1.0"
authors = ["ellbrid <ell@exoskeleton.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chapter01 = { path = "../chapter01" }
chapter09 = { path = "../chapter09" }
chapter05 = { path = "../chapter05" }
chapter07 = { path = "../chapter07" }
rand = "0.7.3"
