[package]
name = "chapter14"
version = "0.1.0"
authors = ["Hayato Ohhashi <o8@vmm.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chapter01 = { path = "../chapter01" }
chapter02 = { path = "../chapter02" }
chapter09 = { path = "../chapter09" }
rand = "0.7.3"
